eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 610855009960.dkr.ecr.us-east-1.amazonaws.com/simplebank:29076cdac2433d6f276180e386982f714b76bbf9
        ports:
        - containerPort: 8080
