eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
spec:
  selector:
    app: simple-bank-api
  ports:
  # - protocol: TCP
  #   port: 80
  #   targetPort: http-server
  - protocol: TCP
    port: 90
    targetPort: grpc-server
    name: grpc-service
  type: ClusterIP
